Implement Get operations and improve exception handling in storage services
- Add support for Get operations in EntityStorageService and code generation
- Refactor exception handling to remove checked exceptions from method signatures
- Improve logging in Service.onFailedRequest to include exception details
- Update code generation to handle EntityReadException in generated code
- Fix column data type retrieval in SchemaDescriptor to handle domain types correctly
- Adjust TableStorage to use custom entity mapper with exception handling
- Modify protobuf definitions to include Get request and response messages
- Clean up and improve code in storage and code generation modules